--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about page</title>
+    <title>contact form</title>
 </head>
 <body>
-    <h1>ABOUT PAGE</h1>
-    <h1>helllo contacts</h1>
+    <h1>contact page</h1>
     <h1>helllo contacts</h1>
 </body>
 </html>
