this is updated files

--- a/about.html
+++ b/about.html
@@ -10,5 +10,6 @@
     <h1>ABOUT PAGE</h1>
     <h1>helllo contacts</h1>
     <h1>helllo contacts</h1>
+    <h2>this is branch update code</h2>
 </body>
 </html>
